--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
+/*global styles*/
+
 body {
     background-color: blueviolet;
+}
+
+header{
+    background-color: lavender;
+
+}
+
+main{
+    background-color: sandybrown;
+}
+
+footer{
+    background-color: aquamarine;
+}
+
+/* section styles*/
+
+section{
+    border: 1px solid black;
+    padding: 5px;
 }
