--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,48 @@
 /*global styles*/
 
 body {
-    background-color: #814D90;
+    background-color: #92d197;
+}
+
+p {
+    font-family: 'Brush Script MT', cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    text-align: center; 
+}
+
+h1 {
+    font-family: livory,serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 5px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 header{
-    background-color: #22AED1;
+    background-color: honeydew;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-ul {
-    
+.container-navigation {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 main{
