--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*global styles*/
 
 body {
-    background-color: #92d197;
+    background-color: #c4e2bf;
 }
 
 p {
@@ -23,17 +23,11 @@ h1 {
 ul {
     list-style-type: none;
     padding: 5px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+
 }
 
 header{
-    background-color: honeydew;
+    background-color: rgb(238, 241, 226);
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -42,7 +36,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-evenly;
 }
 
 main{
@@ -50,12 +44,29 @@ main{
 }
 
 footer{
-    background-color: aquamarine;
+    background-color: rgb(138, 174, 149);
 }
 
-/* section styles*/
 
 section{
     border: 1px solid black;
     padding: 5px;
 }
+
+button {
+    background-color: rgb(238, 241, 226);
+    border: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+    padding: 10px;
+    margin: 2px;
+    transition-duration: .4s;
+}
+
+button:hover {
+    background-color: #c4e2bf;
+    color: white;
+}
+
