--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ p{
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     font-style: normal;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
 }
 
@@ -27,10 +27,11 @@ ul {
 }
 
 header{
-    background-color: rgb(238, 241, 226);
+    background-color: rgb(138, 174, 149);
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 5px;
+    padding: 1px;
 }
 
 .container-navigation {
@@ -42,6 +43,10 @@ header{
 
 main{
     background-color: #FDF0D5;
+    border-radius: 5px;
+    border-color: rgb(138, 174, 149);
+    padding: 40px;
+    margin: 5px;
 }
 
 
@@ -56,7 +61,7 @@ section{
 }
 
 button {
-    background-color: rgb(238, 241, 226);
+    background-color: #FDF0D5;
     border: solid;
     border-width: 1px;
     border-radius: 3px;
@@ -74,6 +79,7 @@ button:hover {
 
 .mountains{
     width: 100%;
+    align-content: center;
 }
 
 .typography-section{
@@ -82,6 +88,36 @@ button:hover {
     font-style: normal;
     font-size: 10px;
     text-align: center;
+    padding: 5px;
+    margin: 10px;
 }
 
+.poster-section{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 10px;
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
+}
 
+.worksheet-section{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 10px;
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
+}
+
+.reflection-section{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 10px;
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
+}
