--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,18 @@ button:hover {
     padding: 5px;
     margin: 10px;
 }
+
+.typo-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.caption {
+    font-size: 15px;
+    font-style: italic;
+   /* text-align: center; */
+   padding: 0 10px;
+}
