--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,8 @@ button:hover {
     align-content: center;
 }
 
+/*sections*/
+
 .typography-section{
     font-family: 'Courier New', Courier, monospace;
     font-weight: 400;
@@ -133,6 +135,5 @@ button:hover {
 .caption {
     font-size: 15px;
     font-style: italic;
-   /* text-align: center; */
-   padding: 0 10px;
+    padding: 0 10px;
 }
