--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ button:hover {
 
 .mountains{
     width: 100%;
+    height: 100%;
     align-content: center;
 }
 
@@ -168,12 +169,16 @@ button:hover {
 .typo-item{
     width: 275px;
     height: 275px;
-    padding: 4px;  
+    padding: 10px;  
+    justify-content: center;
+    align-items: center;
+    display:flex;
+    padding-top:20%;
 }
 
 .typography-group{
     border: 2px solid #c4e2bf;
-    width: 275px;
+    width: 295px;
 }
 
 /*CARP*/
@@ -255,4 +260,15 @@ button:hover {
 .worksheet-group{
     border: 2px solid #c4e2bf;
     width: 275px;
+}
+
+img{
+    transition: transform .2s;
+    width:50px;
+    height:50px;
+    margin:0 auto;
+}
+
+img:hover{
+    transform:scale(1.2);
 }
