--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,14 @@ p{
 }
 
 b{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 600;
     font-style: normal;
     font-size: 20px;
     text-align: center; 
-    color: white;    
+    color: white;
+    margin-top: 10px; 
+    margin-left: 20px;   
 }
 
 h1 {
@@ -47,6 +49,10 @@ header{
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+.push{
+    margin-left: auto;
 }
 
 main{
@@ -275,7 +281,8 @@ button:hover {
     width: 450px;
     height: 300px;
     padding: 4px; 
-    margin-top: 20px; 
+    margin-top: 60px; 
+    margin-bottom: 30px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -283,7 +290,7 @@ button:hover {
 
 .worksheet-group{
     border: 2px solid #c4e2bf;
-    width: 275px;
+    width: 460px;
 }
 
 img{
