--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,26 @@ button:hover {
    justify-content: space-between;
 }
 
+.media-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 15px 25px 15px 15px;
+    flex-direction:row;
+}
+
+.media-container .mediacontent {
+    flex: 1;
+    padding: 10px;
+}
+
+.mediacontent {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-size: 15px;
+    padding-top: 70px;
+}
+
 .section img{
    height: 250px;
 }
