--- a/styles.css
+++ b/styles.css
@@ -222,21 +222,26 @@ button:hover {
 
 .media-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 2px 100px 50px 100px;
+    /* padding: 2px 100px 50px 100px; */
     flex-direction:row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .media-container .mediacontent {
     flex: 1;
-    padding: 130px;
+    /* padding: 130px; */
 }
 
 .mediacontent {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     font-size: 15px;
+    width: 50%;
+    
 }
 
 .section img{
@@ -269,8 +274,9 @@ button:hover {
 }
 
 .carp-item{
-    width: 370px;
-    height: 520px;
+    width: 100%;
+    height: auto;
+    max-width: 400px;
     padding: 4px; 
     margin-top: 40px;
     margin-bottom: 20px;
@@ -278,7 +284,7 @@ button:hover {
 
 .carp-group{
 
-    width: 430px;
+    width: 100%;
 }
 
 /*worksheets*/
@@ -332,3 +338,9 @@ img:hover{
     transform:scale(1.2);
 }
 
+@media screen and (max-width: 900px) {
+    .poster-section {
+      margin: 15px;
+      width: 100%;
+    }
+  }
