--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,16 @@ button:hover {
 }
 
 .worksheet-group{
-    width: 700px;
+    /* width: 700px; */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* padding: 2px 100px 50px 100px; */
+    flex-direction:row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 img{
